--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,3 @@
-@import "./theme";
-
-html, body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-}
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "global";
