--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<p>
-  dashboard works!
-</p>
+  <p>You can monitor the following babies:</p>
+  <ul>
+    <li *ngFor="let baby of babies">{{baby.name}}</li>
+  </ul>
